<resources>
    <string name="type">android</string>
    <string name="alipay">支付宝</string>
    <string name="wechatpay">微信</string>
    <string name="upmp">银联</string>
    <string name="bfb">百度钱包</string>
    <string name="jdpay">京东支付</string>
    <string name="yfbpay">易付宝支付</string>
    <string name="confirm">确认</string>
    <string name="yuan">元</string>
    <string name="donateFailMessage">\u3000\u3000感谢你的爱心，\n但是系统出现了一些错误</string>
    <string name="validationErrors">错误</string>
    <string name="notInstalled">未安装支付软件</string>
    <string name="amount">支付金额</string>
    <string name="missingImage">图片加载失败</string>
    <string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="crop__pick_error">No image sources available</string>
    <string name="data_over">没有更多数据</string>
    <string name="crop__done">确定</string>
    <string name="crop__cancel">取消</string>
    <string name="welcom_dialog">欢迎来到未来研究所！\n猜中未来事件会不会发生\n就能赚未币、换好礼~\n
快去注册，领取新手大礼包吧！</string>
    <string name="tab_more">更多-&#xe649;</string>
    <string name="tab_less">收起-&#xe649;</string>
    <string name="home_tab1">&#xe600;</string>
    <string name="home_tab2">&#xe601;</string>
    <string name="home_tab3">&#xe602;</string>
    <string name="home_tab4">&#xe603;</string>
    <string name="home_bottom_tab1">预测</string>
    <string name="home_bottom_tab2">发现</string>
    <string name="home_bottom_tab3">福利</string>
    <string name="home_bottom_tab4">个人</string>
    <string name="tab_forecast">预测</string>
    <string name="tab_revoke">订单</string>
    <string name="tab_shoop">福利</string>
    <string name="tab_ranking">成就</string>
    <string name="tab_personal">个人</string>
    <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <string name="app_name">未来研究所</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="company_name">未来研究所</string>
    <string name="client_no_response">系统无响应，请稍后再试！</string>
    <string name="connection_interrupt">网络连接中断，请检查网络！</string>
    <string name="login_out">退出登录</string>
    <string name="next">下一步</string>
    <string name="cancel">取消</string>
    <string name="complete">完成</string>
    <string name="submit">提交</string>
    <string name="ok">确定</string>
    <string name="unLogin">未登录</string>
    <string name="new_password">新密码</string>
    <string name="submit_new_password">确认密码</string>
    <string name="reset_pwd">找回密码</string>
    <string name="login_out_tip">确定退出该账户</string>
    <string name="app_regist_tip">抱歉，未来研究所目前仅开放邀请注册。请关注微信公众号“鸭先知”，了解更多邀请码获取方式。</string>
    <string name="login_login">登录</string>
    <string name="login_cancel">取消</string>
    <string name="login_regist">注册</string>
    <string name="login_phone_number">手机号</string>
    <string name="login_password">密码</string>
    <string name="login_forget_password">忘记密码?</string>
    <string name="empty_phone">请输入手机号</string>
    <string name="wrong_phone">请输入合法手机号</string>
    <string name="empty_pwd">请输入密码</string>
    <string name="empty_new_pwd">请输入新密码</string>
    <string name="empty_authCode">请输入验证码</string>
    <string name="regist_auth">获取验证码</string>
    <string name="authCode">验证码</string>
    <string name="regist_password_tip"> （ 密码需要包含字母数字，至少8个字符，区分大小写 ） </string>
    <string name="regist_userName">用户名</string>
    <string name="regist_userName_tip">（ 不多于14个英文字母或者7个汉字 ）</string>
    <string name="sex_hint">性别</string>
    <string name="birthday_hint">生日</string>
    <string name="sex">性别</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="sex_guess">你猜</string>
    <string name="birthday">生日</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="keyword">请选择先知关键词\n（至少选一个）</string>
    <string name="forecast">我要预测</string>
    <string name="myAttention">我的关注</string>
    <string name="hold_deal">已成交预测</string>
    <string name="hold_undeal">未成交预测</string>
    <string name="ranking_fragment_title">排行榜</string>
    <string name="event_detail">事件详情</string>
    <string name="easy_model_tip">点击看好/不看好，即以市价买进/卖空10件该事件。</string>
    <string name="easy_model">简易模式</string>
    <string name="advance_model">高级模式</string>
    <string name="lanren">懒人包〉</string>
    <string name="reference_news">参考消息</string>
    <string name="buy">看好，买进</string>
    <string name="sell">不看好，卖空</string>
    <string name="limit_price">出价</string>
    <string name="market_price">市价</string>
    <string name="submit_buy">确认买入</string>
    <string name="submit_sell">确认卖空</string>
    <string name="lazy_bag">懒人包</string>
    <string name="daily_tip_title">天上掉馅饼啦！</string>
    <string name="daily_tip_message">亲爱的先知，未来研究所任务系统上线啦！每天必领的福利，没有之一~快到「个人中心」的「今日任务」看看吧！</string>
    <string name="userNmae_hint">用户名</string>
    <string name="description_hint">一句话表达"先知态度"</string>
    <string name="asset">我的资产</string>
    <string name="useableMoney">总未币</string>
    <string name="ranking">排名</string>
    <string name="useableIcon">可消费未币</string>
    <string name="depositCash">保证金</string>
    <string name="forecasting">预测中事件</string>
    <string name="record">战绩</string>
    <string name="bill">对账单</string>
    <string name="myattention">我关注的人</string>
    <string name="attendMe">关注我的人</string>
    <string name="secret">隐私</string>
    <string name="question">常见问题</string>
    <string name="feedback">意见反馈</string>
    <string name="privacy">服务条款</string>
    <string name="about_us">关于我们</string>
    <string name="store">未来福利社</string>
    <string name="FAQ">常见问题</string>
    <string name="media_report">媒体报道</string>
    <string name="contact_us">联系我们</string>
    <string name="guidang">归档事件</string>
    <string name="pushMessage">通知中心</string>
    <string name="regist_sucess_tip">欢迎加入未来研究所，现在去「个人」页面完成新手任务，领取大礼包吧！</string>
    <string name="hold_delete">确定清空所有已清算的预测记录？</string>
    <string name="unhold_delete">确定清空所有已失效的预测记录？</string>
    <string name="unhold_revoke">确定撤销该预测订单？</string>
    <string name="point">● </string>
    <string name="buy_tip_1">若事件发生则<font color="#CB232B"> 看好 </font>盈利 | 事件不发生则<font color="#008842"> 不看好 </font>盈利</string>
    <string name="buy_tip_buy">● 越低价成交赚越多  但不一定能成交</string>
    <string name="buy_tip_sell">● 越高价成交赚越多  但不一定能成交</string>
    <string name="steep3_price_tip">● 此次预测将用</string>
    <string name="event_detail_good"> 若事件发生你将 </string>
    <string name="event_detail_bad">\t|\t若事件不发生你将</string>
    <string name="hold_1">又不看好&#160;</string>
    <string name="unhold_1">你看好&#160;&#160;&#160;&#160;&#160;</string>
    <string name="unhold_1_1">你已<font color="#ff6565">看多</font></string>
    <string name="unhold_2">你已<font color="#B9D310">看空</font></string>
    <string name="unhold_3">剩余&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="event_detail_deal">其中&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="space">&#160;&#160;&#160;&#160;</string>
    <string name="event_detail_depend">清算依据</string>
    <string name="event_detail_focus">关注该事件</string>
    <string name="event_detail_unfocus">取消关注该事件</string>
    <string name="event_detail_share">分享</string>
    <string name="event_detail_guide">新手说明</string>
    <string name="order_look_good">此次预测，如果事件发生，则你获利（100-P）*Q=￥;若事件不发生，则你亏损 P*Q=$</string>
    <string name="order_look_bad">此次预测，如果事件不发生，则你获利 P*Q=$，若事件发生，则你亏损（100-P）*Q=￥</string>
	<string name="tip_rule">这个事件是YES/NO型，最后清算价格只可能是100或0，代表着事件【发生】或是【未发生】两种结果，不会存在中间状态哦
清算依据呢，就是$
如果事件提前发生，鸭先知就只好提前关闭交易并清算啦。
事件清算若出现了任何争议，本先知会送往仲裁委员会裁决，一定会给大家个公正的结果哒！</string>
    <string name="empty_hold">这里空空如也，鸭先知都能在这儿筑巢啦</string>
    <string name="shareTips">目前大家认为有X%的可能性会发生【Y】，你信吗？</string>
    <string name="show_homepage">Ta的主页</string>
    <string name="show_assure">总资产(未币)</string>
    <string name="show_forecast">预测中事件</string>
    <string name="show_ranking">他的战绩</string>
    <string name="show_comment">他的评论</string>
    <string name="show_attention">他关注的人</string>
    <string name="show_attend">关注他的人</string>
    <string name="title_activity_home3">Home3Activity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_article_detail">ArticleDetailActivity</string>
    <string name="title_activity_aritlce">AritlceActivity</string>
    <string name="title_activity_today_task">TodayTaskActivity</string>
</resources>