<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:HomeTab="http://schemas.android.com/apk/res/com.futureinst"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/widget_height_55"
    android:background="@drawable/top_line"
    android:gravity="center_vertical"
    android:orientation="horizontal" >
    <com.futureinst.widget.HomeTabView
            android:id="@+id/tab1"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            HomeTab:iconFontText="@string/home_tab1"
            HomeTab:bottomText="@string/home_bottom_tab1"
            />
    <com.futureinst.widget.HomeTabView
            android:id="@+id/tab2"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            HomeTab:iconFontText="@string/home_tab2"
            HomeTab:bottomText="@string/home_bottom_tab2"
            />
    <com.futureinst.widget.HomeTabView
            android:id="@+id/tab3"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            HomeTab:iconFontText="@string/home_tab3"
            HomeTab:bottomText="@string/home_bottom_tab3"
            />
    
    <RelativeLayout 
        android:id="@+id/tab_personal"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
        <com.futureinst.widget.HomeTabView
            android:id="@+id/tab4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            HomeTab:iconFontText="@string/home_tab4"
            HomeTab:bottomText="@string/home_bottom_tab4"
            />
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <TextView 
           android:id="@+id/tv_message_count"
           android:visibility="invisible"
           android:layout_marginLeft="@dimen/margin_20"
           android:layout_width="@dimen/margin_20"
           android:layout_height="@dimen/margin_20"
           android:gravity="center"
           android:textColor="@color/text_color_white"
           android:background="@drawable/point_red"
           android:textSize="@dimen/text_size_small"
           android:text="99"/>
        </LinearLayout>
    </RelativeLayout>
    
    

</LinearLayout>
