<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   
    android:orientation="vertical" >
   <LinearLayout 
       android:layout_width="match_parent"
    android:layout_height="wrap_content"
    
    android:layout_margin="@dimen/activity_login_padding"
    android:orientation="vertical">
       
   
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_height_35"
            android:gravity="center"
            android:background="@drawable/top_cornor_bg"
            style="@style/BaseCheckTextType"
            android:text="@string/sex_hint"/>
        <View 
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/text_color_b0"/>
        <TextView 
            android:id="@+id/tv_male"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_height_35"
            android:gravity="center"
            style="@style/BaseCheckTextType"
            android:background="@drawable/item_select"
            android:text="@string/sex_male"/>
        <View 
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/text_color_b0"/>
        <TextView 
            android:id="@+id/tv_female"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_height_35"
            android:gravity="center"
            style="@style/BaseCheckTextType"
            android:background="@drawable/item_select"
            android:text="@string/sex_female"/>
        <View 
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/text_color_b0"/>
        <TextView 
            android:id="@+id/tv_guess"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_height_35"
            android:gravity="center"
            style="@style/BaseCheckTextType"
            android:background="@drawable/bottom_cornor_bg"
            android:text="@string/sex_guess"/>
        <TextView 
            android:id="@+id/tv_cancel"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginBottom="@dimen/activity_login_margin_10"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_height_35"
            android:gravity="center"
            style="@style/BaseCheckTextType"
            android:text="@string/cancel"
            android:background="@drawable/view_shap"/>
        </LinearLayout>
</LinearLayout>
