<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@color/text_color_white"
    android:orientation="vertical"
    android:padding="@dimen/activity_login_padding"
    tools:context=".LoginActivity" >
	<EditText 
	    android:id="@+id/et_phoneNumber"
	    android:layout_marginTop="60dip"
	    android:paddingBottom="3dip"
	    android:inputType="phone"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/widget_height_45"
	    android:hint="@string/login_phone_number"
	    android:textColor="@color/text_color_b"
	    android:background="@null"
	    android:maxLength="13"
	    android:gravity="bottom"
	    android:textSize="@dimen/text_size_normal"/>
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/line_height"
	    android:background="@color/text_color_b"/>
	<EditText 
	    android:id="@+id/et_password"
	    android:paddingBottom="3dip"
	    android:inputType="textPassword"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/widget_height_45"
	    android:hint="@string/login_password"
	    android:textColor="@color/text_color_b"
	    android:background="@null"
	    android:gravity="bottom"
	    android:maxLength="16"
	    android:textSize="@dimen/text_size_normal"/>
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/line_height"
	    android:background="@color/text_color_b"/>

	<Button
	    android:id="@+id/btn_login"
	    android:layout_marginTop="@dimen/margin_20"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/widget_height_45"
	    android:textColor="@color/text_color_white"
	    android:background="@drawable/login_btn_login"
	    android:text="@string/login_login" />
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/widget_height_35"
	    android:orientation="horizontal"
	    android:gravity="right">
	    <TextView 
	        android:id="@+id/tv_forgetPwd"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:gravity="center"
	        android:textSize="@dimen/text_size_normal"
	        android:textColor="@color/text_color_b"
	        android:text="@string/login_forget_password"/>
	</LinearLayout>
</LinearLayout>
