<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:background="@drawable/view_hold_delete">
        <TextView 
            android:id="@+id/tv_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/text_color_white"
            android:layout_marginTop="@dimen/activity_login_margin_10"
            android:layout_marginBottom="@dimen/margin_20"
            android:text="@string/hold_delete"/>
        <Button 
            android:id="@+id/btn_cancel"
            android:layout_marginLeft="@dimen/widget_height_35"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/text_color_white"
            android:text="@string/cancel"
            android:layout_below="@+id/tv_tips"
            android:layout_width="70dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:background="@drawable/btn_sell_back"
            android:minHeight="@dimen/widget_height_40"/>
        <Button 
            android:id="@+id/btn_submit"
            android:layout_marginRight="@dimen/widget_height_35"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/text_color_white"
            android:text="@string/ok"
            android:layout_below="@+id/tv_tips"
            android:layout_width="70dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:background="@drawable/btn_buy_back"
            android:minHeight="@dimen/widget_height_40"/>
    </RelativeLayout>

</LinearLayout>
