<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_login_margin_10"
        android:layout_margin="@dimen/margin_20"
        android:background="@drawable/view_shap">
        <EditText 
            android:id="@+id/et_user_desccription"
            android:padding="@dimen/margin_5"
            android:background="@drawable/edit_back_squre"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/text_color_6"
            android:layout_width="match_parent"
            android:hint="@string/description_hint"
            android:gravity="left"
            android:maxLength="20"
            android:layout_height="90dip"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_login_margin_10"
            android:layout_marginBottom="@dimen/activity_login_margin_10"
            android:layout_height="@dimen/widget_height_45"
            android:orientation="horizontal"
            android:gravity="center">
            <Button 
                android:id="@+id/btn_cancel"
                android:layout_width="80dip"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:textColor="@color/text_color_white"
                android:textSize="@dimen/text_size_normal"
                android:background="@drawable/btn_buy_back"/>
            <Button 
                android:id="@+id/btn_submit"
                android:layout_marginLeft="60dip"
                android:layout_width="80dip"
                android:layout_height="match_parent"
                android:text="@string/ok"
                android:textColor="@color/text_color_white"
                android:textSize="@dimen/text_size_normal"
                android:background="@drawable/btn_sell_back"/>
            
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
